set z-index=2 for vic-hover-widget to fix edit

--- a/Resources/public/Commons/less/newslisting.less
+++ b/Resources/public/Commons/less/newslisting.less
@@ -5,3 +5,9 @@
 .articlelist th {
     width: 80px;
 }
+
+.vic-widget-articlelist {
+    .vic-hover-widget {
+        z-index: 2;
+    }
+}
